# Sentinel

./: CMakeLists.txt  LICENSE  README.md
Documentation/: Goals  TechnicalGoals
src/: debug.cu  debug.cuh  main.cpp  test.cu  test.cuh
